src/codegen/tests/snapshots/rusty__codegen__tests__statement_codegen_test__byteaccess_generated_as_rsh_and_trunc_i8.snap
---
source: src/codegen/tests/statement_codegen_test.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i8, i32, i32 }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %a = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %y = getelementptr inbounds %prg, %prg* %0, i32 0, i32 2
  %load_x = load i32, i32* %x, align [filtered]
  %shift = lshr i32 %load_x, 0
  %1 = trunc i32 %shift to i8
  store i8 %1, i8* %a, align [filtered]
  %load_x1 = load i32, i32* %x, align [filtered]
  %shift2 = lshr i32 %load_x1, 8
  %2 = trunc i32 %shift2 to i8
  store i8 %2, i8* %a, align [filtered]
  %load_y = load i32, i32* %y, align [filtered]
  %shift3 = ashr i32 %load_y, 24
  %3 = trunc i32 %shift3 to i8
  store i8 %3, i8* %a, align [filtered]
  ret void
}
