src/codegen/tests/snapshots/rusty__codegen__tests__statement_codegen_test__dwordaccess_generated_as_rsh_and_trunc_i32.snap
---
source: src/codegen/tests/statement_codegen_test.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i32, i64, i64 }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %a = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %y = getelementptr inbounds %prg, %prg* %0, i32 0, i32 2
  %load_x = load i64, i64* %x, align [filtered]
  %shift = lshr i64 %load_x, 0
  %1 = trunc i64 %shift to i32
  store i32 %1, i32* %a, align [filtered]
  %load_x1 = load i64, i64* %x, align [filtered]
  %shift2 = lshr i64 %load_x1, 32
  %2 = trunc i64 %shift2 to i32
  store i32 %2, i32* %a, align [filtered]
  %load_y = load i64, i64* %y, align [filtered]
  %shift3 = ashr i64 %load_y, 32
  %3 = trunc i64 %shift3 to i32
  store i32 %3, i32* %a, align [filtered]
  ret void
}
