src/codegen/tests/snapshots/rusty__codegen__tests__statement_codegen_test__floating_point_type_casting.snap
---
source: src/codegen/tests/statement_codegen_test.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define i32 @fn() {
entry:
  %fn = alloca i32, align [filtered]
  %a = alloca float, align [filtered]
  %b = alloca float, align [filtered]
  %c = alloca float, align [filtered]
  %d = alloca double, align [filtered]
  %e = alloca double, align [filtered]
  %f = alloca double, align [filtered]
  store float 3.000000e+00, float* %a, align [filtered]
  store float 3.500000e+00, float* %b, align [filtered]
  store float 3.500000e+00, float* %c, align [filtered]
  store double 3.000000e+00, double* %d, align [filtered]
  store double 3.500000e+00, double* %e, align [filtered]
  store double 3.500000e+00, double* %f, align [filtered]
  store i32 0, i32* %fn, align [filtered]
  store float 3.000000e+00, float* %a, align [filtered]
  store float 3.500000e+00, float* %b, align [filtered]
  store float 3.500000e+00, float* %c, align [filtered]
  store double 3.000000e+00, double* %d, align [filtered]
  store double 3.500000e+00, double* %e, align [filtered]
  store double 3.500000e+00, double* %f, align [filtered]
  %fn_ret = load i32, i32* %fn, align [filtered]
  ret i32 %fn_ret
}
