src/codegen/tests/snapshots/rusty__codegen__tests__statement_codegen_test__function_result_assignment_on_aliased_string.snap
---
source: src/codegen/tests/statement_codegen_test.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

declare void @CONCAT(ptr, ptr, ptr)

define zeroext i8 @LIST_ADD(ptr %0, ptr %1) {
entry:
  %LIST_ADD = alloca i8, align [filtered]
  %INS = alloca [1001 x i8], align [filtered]
  call void @llvm.memset.p0.i64(ptr align [filtered] %INS, i8 0, i64 1001, i1 false)
  call void @llvm.memcpy.p0.p0.i64(ptr align [filtered] %INS, ptr align [filtered] %0, i64 1000, i1 false)
  %sx = alloca [2 x i8], align [filtered]
  call void @llvm.memset.p0.i64(ptr align [filtered] %sx, i8 0, i64 2, i1 false)
  call void @llvm.memcpy.p0.p0.i64(ptr align [filtered] %sx, ptr align [filtered] %1, i64 1, i1 false)
  store i8 0, ptr %LIST_ADD, align [filtered]
  %__CONCAT0 = alloca [1025 x i8], align [filtered]
  call void @llvm.memset.p0.i64(ptr align [filtered] %__CONCAT0, i8 0, i64 ptrtoint (ptr getelementptr ([1025 x i8], ptr null, i32 1) to i64), i1 false)
  call void @CONCAT(ptr %__CONCAT0, ptr %sx, ptr %INS)
  call void @llvm.memcpy.p0.p0.i32(ptr align [filtered] %INS, ptr align [filtered] %__CONCAT0, i32 1000, i1 false)
  %LIST_ADD_ret = load i8, ptr %LIST_ADD, align [filtered]
  ret i8 %LIST_ADD_ret
}

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: write)
declare void @llvm.memset.p0.i64(ptr writeonly captures(none), i8, i64, i1 immarg) #0

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i64(ptr noalias writeonly captures(none), ptr noalias readonly captures(none), i64, i1 immarg) #1

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i32(ptr noalias writeonly captures(none), ptr noalias readonly captures(none), i32, i1 immarg) #1

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: write) }
attributes #1 = { nocallback nofree nounwind willreturn memory(argmem: readwrite) }
