src/codegen/tests/snapshots/rusty__codegen__tests__statement_codegen_test__nested_bitwise_access.snap
---
source: src/codegen/tests/statement_codegen_test.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i8, i64 }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %a = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %load_x = load i64, i64* %x, align [filtered]
  %shift = lshr i64 %load_x, 32
  %1 = trunc i64 %shift to i32
  %shift1 = lshr i32 %1, 16
  %2 = trunc i32 %shift1 to i16
  %shift2 = lshr i16 %2, 8
  %3 = trunc i16 %shift2 to i8
  %shift3 = lshr i8 %3, 1
  %4 = and i8 %shift3, 1
  store i8 %4, i8* %a, align [filtered]
  ret void
}
