src/codegen/tests/snapshots/rusty__codegen__tests__statement_codegen_test__variable_based_bitwise_access.snap
---
source: src/codegen/tests/statement_codegen_test.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i8, i8, i16, i16 }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %a = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %b = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 2
  %y = getelementptr inbounds %prg, %prg* %0, i32 0, i32 3
  %load_x = load i16, i16* %x, align [filtered]
  %load_y = load i16, i16* %y, align [filtered]
  %shift = ashr i16 %load_x, %load_y
  %1 = trunc i16 %shift to i8
  %2 = and i8 %1, 1
  store i8 %2, i8* %a, align [filtered]
  %load_x1 = load i16, i16* %x, align [filtered]
  %load_y2 = load i16, i16* %y, align [filtered]
  %3 = mul i16 %load_y2, 8
  %shift3 = ashr i16 %load_x1, %3
  %4 = trunc i16 %shift3 to i8
  store i8 %4, i8* %b, align [filtered]
  ret void
}
